# pdfannotation

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extract_pdf_annotations.py  pyproject.toml  reduce_annotations_json.py  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
tests/: test_extract_pdf_annotations.py  test_reduce_annotations_json.py
