[project]
name = "pdf-annotation-extractor"
version = "0.1.0"
description = "Extract PDF annotations, map them to subsections, and export JSON."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.2.0,<6",
  "pdfplumber>=0.11.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
  "ruff>=0.6.0,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

